@@ -1,3 +1,9 @@
+2008-09-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>
+            Kaushal Kantawala  <kaushal_kantawala@playstation.sony.com>
+
+	PR tree-opt/36891
+	* gcc.dg/torture/pr36891.c: New testcase.
+
 2008-09-28  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/conv_decimal.adb: New test.
